Updated BinderHub URL

--- a/_config.yml
+++ b/_config.yml
@@ -23,5 +23,5 @@ html:
   use_repository_button: true
 launch_buttons:
   colab_url: "https://colab.research.google.com"
-  binderhub_url: ""
+  binderhub_url: "https://mybinder.org"
   thebe: true
