--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: images/logo.png
 # Execution settings
 # -------------------
 execute:
-  execute_notebooks: force
+  execute_notebooks: cache
 
 # GitHub-settings
 # ----------------
